[package]
name = "trees-wasm-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
wasmer = "3.1.1"
wasmer-compiler-cranelift = "3.1.1"
wasmer-wasi = { version = "3.1.1", features = [] }
